# wavs-eas

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  EAS_DEPLOYMENT.md  EAS_INTEGRATION_COMPLETE.md  Makefile  PLAN.md  README.md  SPEC.md  foundry.toml  package-lock.json  package.json  remappings.txt  test_verification.md
components/eas-attest/: Cargo.toml  README.md  config.json  example_usage.md  test_input.json
components/eas-attest/src/: bindings.rs  lib.rs  trigger.rs
components/eas-compute/: Cargo.toml  Makefile  README.md
components/eas-compute/src/: bindings.rs  lib.rs
components/js-eas-sdk-demo/: Makefile  README.md  compute.ts  config.json  data-utils.ts  eas-client.ts  index.ts  package-lock.json  package.json  spatial-analysis.ts  types.ts
script/: Common.s.sol  DeployEAS.s.sol  EASAttestTrigger.s.sol  JsTrigger.s.sol  README.md  Schema.s.sol  ShowResult.s.sol  Trigger.s.sol  build-service.sh  deploy-contracts.sh  deploy-script.sh  extract-schema-uid.sh  manual-deploy-fix.sh  upload-to-wasi-registry.sh
src/common/: CmdRunner.sol
src/contracts/: Attester.sol  EASAttestTrigger.sol  IndexerResolver.sol  LogResolver.sol  OffchainAttestationVerifier.sol  SchemaRegistrar.sol  Trigger.sol  WavsSubmit.sol  WavsTrigger.sol
src/contracts/eip712/: EIP712Verifier.sol
src/interfaces/: IWavsTrigger.sol
test/unit/: Attester.t.sol  DeployEAS.t.sol  IndexerResolver.t.sol  LogResolver.t.sol  OffchainAttestationVerifier.t.sol  SchemaRegistrar.t.sol  WavsTrigger.t.sol
