[package]
name = "wavs-eas-compute"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen-rt = { workspace = true }
wavs-wasi-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-sol-macro = { workspace = true }
wstd = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
alloy-network = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
hex = "0.4.3"

[lib]
crate-type = ["cdylib"]


[package.metadata.component]
package = "component:wavs-eas-compute"
target = "wavs:worker/layer-trigger-world@0.4.0-beta.4"
